Exportar datos de skills

--- a/pycpt2/Comparaciones.ipynb
+++ b/pycpt2/Comparaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "id": "b8b3b881-1791-4da6-9ff6-772b078b19f4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "ea4f9ab5-257b-44e1-ab86-eb4e18bbe8e8",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d057f776-5f8a-4f86-88c6-bdb47c6ea618",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ce9f0120-c5d9-4a7f-b1ab-90e7f53d824b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cb787dc0-441d-498e-be86-959c70854294",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 6,
    "id": "e849f651-82e7-4004-af33-09702baabdb0",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 7,
    "id": "5e22cdf2-2c0f-4a2f-89f2-a5be814a1041",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "   'predictor_extent': {'east': -15, 'west': -55, 'north': 25, 'south': 5}}}]"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 8,
    "id": "33ab71a8-bbd8-4b68-af01-6e29102fe9e4",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 9,
    "id": "569ef174-9913-4881-ac7d-84bd6f81213b",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 10,
    "id": "c6106da0-d171-41b5-9356-5b32eafcd8fb",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "dict_keys(['CanSIPSIC3', 'SPEAR', 'CFSv2', 'SEAS5', 'CCSM4', 'GEOSS2S', 'GLOSEA6'])"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 11,
    "id": "b11f54d4-95f7-4228-be46-6042619a0923",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "Text(0.5, 1.0, 'CanSIPSIC3')"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 12,
    "id": "a8a181ac-fd53-4b67-a707-fe7e30eb7b17",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 13,
    "id": "dcdd337e-2d4a-4c84-b1f8-9b3e262c6752",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "Text(0.5, 0.98, 'Sur')"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 14,
    "id": "aebfde9d-4d93-43bf-b923-d1666e7e8b75",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "Text(0.5, 0.98, 'Central')"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 15,
    "id": "d1f6ff14-2c83-47be-b408-805b16f35860",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "Text(0.5, 0.98, 'Norte')"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 16,
    "id": "e4049681-1f0e-47dd-bf18-b3b961cd749f",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 17,
    "id": "be8baee3-70bd-43ff-9a92-9a9c43af5794",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "  0.07804632363851309]]"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 18,
    "id": "8ddb3eeb-b5ef-4bc3-ba1e-14997de918fd",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 19,
    "id": "df8ec49d-2fd2-4b50-b6bd-5364257256fd",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 20,
    "id": "8a6ad325-a643-4ccf-8014-f51200c9d646",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 21,
    "id": "02591e2f-3010-4638-9710-0df1a0788f1c",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
        "[1155 rows x 8 columns]"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 22,
    "id": "c37c66fd-45b7-4a84-b547-1d2c07eb2271",
    "metadata": {},
    "outputs": [
@@ -784,13 +784,23 @@
        "       'GLOSEA6'], dtype=object)"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfaggs[(dfaggs.area==\"sur\") & (dfaggs.periodo==\"MJJ\")].model.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3793c099-3068-4373-8e12-4e8fc99bb449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfaggs.to_csv(\"../data/skills.csv\")"
    ]
   },
   {
